--- a/AutoHubAPI/AutoHub.API/AutoHub.API.csproj
+++ b/AutoHubAPI/AutoHub.API/AutoHub.API.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.1.23111.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.1.23111.4">
           <PrivateAssets>all</PrivateAssets>
