--- a/AutoHubAPI/AutoHub.API/AutoHub.API.csproj
+++ b/AutoHubAPI/AutoHub.API/AutoHub.API.csproj
@@ -15,6 +15,10 @@
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.11" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
     </ItemGroup>
 
     <ItemGroup>
