Improved code quality

--- a/AutoHubAPI/AutoHub.API/AutoHub.API.csproj
+++ b/AutoHubAPI/AutoHub.API/AutoHub.API.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AutoHub.Core\AutoHub.Core.csproj" />
       <ProjectReference Include="..\AutoHub.Data\AutoHub.Data.csproj" />
     </ItemGroup>
 
