--- a/AutoHubAPI/AutoHub.Data/AutoHub.Data.csproj
+++ b/AutoHubAPI/AutoHub.Data/AutoHub.Data.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AutoHub.Utilities\AutoHub.Utilities.csproj" />
+    </ItemGroup>
+
 </Project>
