Integrated Cloudinary for images management

--- a/AutoHubAPI/AutoHub.API/appsettings.json
+++ b/AutoHubAPI/AutoHub.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "User ID=viktoriya;Password=docker;Host=localhost;Port=5432;Database=AutoHub;Pooling=true;Connection Lifetime=0;"
+  },
+  "Cloudinary": {
+    "Name": "dvot6zbjv",
+    "Key": "398598915177429",
+    "Secret": "BNshcsxQMJR6RyVg-wTZt5g_iaY"
   }
 }
