--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -44,7 +44,7 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"WolfStrength_AutoHub" /o:"wolfstrength" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-           run: dotnet restore ./AutoHubAPI/AutoHub.API/AutoHub.API.csproj
-           run: dotnet build ./AutoHubAPI/AutoHub.API/AutoHub.API.csproj --no-restore
-           run: dotnet test ./AutoHubAPI/AutoHub.API/AutoHub.API.csproj --no-build --verbosity normal
+            dotnet restore ./AutoHubAPI/AutoHub.API/AutoHub.API.csproj
+            dotnet build ./AutoHubAPI/AutoHub.API/AutoHub.API.csproj --no-restore
+            dotnet test ./AutoHubAPI/AutoHub.API/AutoHub.API.csproj --no-build --verbosity normal
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
