--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,34 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.x
+    
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+          distribution: microsoft
+          java-version: 11
+
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v1
+      with:
+          path: ~/sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+    - name: Cache SonarCloud scanner
+      id: cache-sonar-scanner
+      uses: actions/cache@v1
+      with:
+          path: ./.sonar/scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+
+    - name: Install SonarCloud scanner
+      if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+      run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
+      
+    - name: Start analyzation with SonarCloud
+      run: ./.sonar/scanner/dotnet-sonarscanner begin /k:"jivkovaviktoria_AutoHub" /o:"jivkovaviktoria" /d:sonar.cs.opencover.reportsPaths="./AutoHubAPI/**/coverage.opencover.xml" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
 
     - name: Restore dependencies
       run: dotnet restore ./AutoHubAPI/AutoHubAPI.sln
@@ -28,4 +56,7 @@ jobs:
       run: dotnet build ./AutoHubAPI/AutoHubAPI.sln --no-restore --configuration "${{ env.CONFIGURATION }}"
     
     - name: Test
-      run: dotnet test ./AutoHubAPI/AutoHubAPI.sln --no-build --verbosity normal --configuration "${{ env.CONFIGURATION }}"
+      run: dotnet test ./AutoHubAPI/AutoHubAPI.sln --no-build --verbosity normal --configuration "${{ env.CONFIGURATION }}" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+
+    - name: Finalize analyzation with SonarCloud
+      run: ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
