--- a/AutoHubAPI/AutoHub.API/appsettings.json
+++ b/AutoHubAPI/AutoHub.API/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "User ID=viktoriya;Password=docker;Host=localhost;Port=5432;Database=AutoHub-Test;"
+  },
   "Cloudinary": {
     "Name": "dvot6zbjv",
     "Key": "398598915177429",
