--- a/AutoHubAPI/AutoHub.Data/AutoHub.Data.csproj
+++ b/AutoHubAPI/AutoHub.Data/AutoHub.Data.csproj
@@ -20,4 +20,10 @@
       <ProjectReference Include="..\AutoHub.Utilities\AutoHub.Utilities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.7\Microsoft.Extensions.Configuration.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
