--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
       
     - name: Start analyzation with SonarCloud
-      run: ./.sonar/scanner/dotnet-sonarscanner begin /k:"jivkovaviktoria_AutoHub" /o:"jivkovaviktoria" /d:sonar.cs.opencover.reportsPaths="./AutoHubAPI/**/coverage.opencover.xml" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+      run: ./.sonar/scanner/dotnet-sonarscanner begin /k:"jivkovaviktoria_AutoHub" /o:"jivkovaviktoria" /d:sonar.cs.opencover.reportsPaths="./AutoHubAPI/**/coverage.opencover.xml" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="**/Migrations/**"
 
     - name: Restore dependencies
       run: dotnet restore ./AutoHubAPI/AutoHubAPI.sln
