--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ TestResults/
 
 appsettings.local.json
 
-.dockerignore
-docker-compose.dcproj
-docker-compose.override.yml
+**/.dockerignore
+**/docker-compose.dcproj
+**/docker-compose.override.yml
 
